@@ -7,6 +7,7 @@
 - 2021-05-08                                -
 ---------------------------------------------
 .: WSM: Task: Update invoice-setup to show check (WSM-232)
+.: WSM: Task: Add payment method message (WSM-232)
 
 ---------------------------------------------
 - 2021-05-06                                -
